--- a/3.Mysql/进阶.md
+++ b/3.Mysql/进阶.md
@@ -2,7 +2,7 @@
 
 MySQL体系结构
 
-![ ](https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210041429059.png)
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210041429059.png" alt=" " style="zoom: 33%;" />
 
 1. 连接层 ：最上层是一些客户端和链接服务，包含本地sock 通信和大多数基于客户端/服务端工具实现的类似于 TCP/IP的通信。主要完成一些类似于连接处理、授权认证、及相关的安全方案。在该层上引入了线程 池的概念，为通过认证安全接入的客户端提供线程。同样在该层上可以实现基于SSL的安全链接。服务 器也会为安全接入的每个客户端验证它所具有的操作权限。
 2. 服务层 ： 第二层架构主要完成大多数的核心服务功能，如SQL接口，并完成缓存的查询，SQL的分析和优化，部 分内置函数的执行。所有跨存储引擎的功能也在这一层实现，如 过程、函数等。在该层，服务器会解 析查询并创建相应的内部解析树，并对其完成相应的优化如确定表的查询的顺序，是否利用索引等， 最后生成相应的执行操作。如果是select语句，服务器还会查询内部的缓存，如果缓存空间足够大， 这样在解决大量读操作的环境中能够很好的提升系统的性能。
@@ -1064,7 +1064,7 @@ update course set name = 'EE' where id = 4 ;
 
 当我们开启多个事务，在执行上述的SQL时，我们发现行锁升级为了表锁。 导致该update语句的性能 大大降低。
 
-**当更新name字段时，由于name字段没有索引，此时加的就不是行锁了，而是表锁**
+**当更新name字段时，条件是where name = --- 由于name字段没有索引，此时加的就不是行锁了，而是表锁**
 
 **所以在执行update语句的时候，一定要根据索引来更新，**
 
@@ -1917,3 +1917,704 @@ show triggers ;
 delete from tb_user where id = 25;
 ```
 
+# 锁概述
+
+锁是计算机协调多个进程或线程并发访问某一资源的机制。在数据库中，除传统的计算资源（CPU、 RAM、I/O）的争用以外，数据也是一种供许多用户共享的资源。如何保证数据并发访问的一致性、有 效性是所有数据库必须解决的一个问题，锁冲突也是影响数据库并发访问性能的一个重要因素。从这个 角度来说，锁对数据库而言显得尤其重要，也更加复杂。
+
+MySQL中的锁，按照锁的粒度分，分为以下三类：
+
+- 全局锁：锁定数据库中的所有表。 
+
+- 表级锁：每次操作锁住整张表。 
+
+- 行级锁：每次操作锁住对应的行数据。
+
+	 
+
+# 全局锁
+
+全局锁就是对整个数据库实例加锁，加锁后整个实例就处于只读状态，后续的DML的写语句，DDL语 句，已经更新操作的事务提交语句都将被阻塞。 
+
+其典型的使用场景是做全库的逻辑备份，对所有的表进行锁定，从而获取一致性视图，保证数据的完整 性。
+
+不加全局锁的问题
+
+- 在进行数据备份时，先备份了tb_stock库存表。 
+- 然后接下来，在业务系统中，执行了下单操作，扣减库存，生成订单（更新tb_stock表，插入 tb_order表）。 
+- 然后再执行备份 tb_order表的逻辑。 
+- 业务中执行插入订单日志操作。 
+- 最后，又备份了tb_orderlog表。 
+
+此时备份出来的数据，是存在问题的。
+
+因为备份出来的数据，tb_stock表与tb_order表的数据不一 致(有最新操作的订单信息,但是库存数没减)。
+
+加锁之后：
+
+对数据库进行进行逻辑备份之前，先对整个数据库加上全局锁，一旦加了全局锁之后，其他的DDL、 DML全部都处于阻塞状态，但是可以执行DQL语句，也就是处于只读状态，而数据备份就是查询操作。 那么数据在进行逻辑备份的过程中，数据库中的数据就是不会发生变化的，这样就保证了数据的一致性 和完整性
+
+**语法**
+
+1. 加锁
+
+```SQL
+flush tables with read lock 
+```
+
+2. 数据备份
+
+```sql
+mysqldump -uroot –p1234 itcast > itcast.sql  -- 这个不是mysql命令，应该直接在windows命令行中执行
+```
+
+3. 释放锁
+
+```sql
+unlock tables ;
+```
+
+特点：
+
+数据库中加全局锁，是一个比较重的操作，存在以下问题：
+
+- 如果在主库上备份，那么在备份期间都不能执行更新，业务基本上就得停摆。 
+- 如果在从库上备份，那么在备份期间从库不能执行主库同步过来的二进制日志（binlog），会导 致主从延迟。
+
+在InnoDB引擎中，我们可以在备份时加上参数 --single-transaction 参数来完成不加锁的一致 性数据备份。
+
+```sql
+mysqldump --single-transaction -uroot –p123456 itcast > itcast.sql
+```
+
+# 表级锁
+
+表级锁，每次操作锁住整张表。锁定粒度大，发生锁冲突的概率最高，并发度最低。应用在MyISAM、 InnoDB、BDB等存储引擎中。
+
+对于表级锁，主要分为以下三类：
+
+- 表锁 
+- 元数据锁（meta data lock，MDL）
+- 意向锁
+
+### 表锁
+
+对于表锁，分为两类： 
+
+- 表共享读锁（read lock） 
+- 表独占写锁（write lock）
+
+加锁：lock tables 表名... read/write。 
+
+释放锁：unlock tables / 客户端断开连接 。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836860.png" alt="image-20221008111737821" style="zoom:50%;" />
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836865.png" style="zoom:50%;" />
+
+### **元数据锁**
+
+meta data lock , 元数据锁，简写MDL。
+
+MDL加锁过程是系统自动控制，无需显式使用，在访问一张表的时候会自动加上。MDL锁主要作用是维 护表元数据的数据一致性，在表上有活动事务的时候，不可以对元数据进行写入操作。**为了避免DML与 DDL冲突，保证读写的正确性。**
+
+这里的元数据，大家可以简单理解为就是一张表的表结构。 也就是说，某一张表涉及到未提交的事务 时，是不能够修改这张表的表结构的。
+
+在MySQL5.5中引入了MDL，当对一张表进行增删改查的时候，加MDL读锁(共享)；当对表结构进行变 更操作的时候，加MDL写锁(排他)。
+
+常见的SQL操作时，所添加的元数据锁
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836976.png" alt="image-20221008112218684" style="zoom: 33%;" />
+
+在事务当中执行select语句，还有crud操作时，会加上一个元数据锁，但是这两类是一共享锁，之间是兼容的
+
+查看元数据锁的状态
+
+```sql
+select object_type,object_schema,object_name,lock_type,lock_duration from performance_schema.metadata_locks ;
+```
+
+### 意向锁
+
+假如没有意向锁，客户端一对表加了行锁后，客户端二如何给表加表锁呢，来通过示意图简单分析一 下：
+
+首先客户端一，开启一个事务，然后执行DML操作，在执行DML语句时，会对涉及到的行加行锁。
+
+当客户端二，想对这张表加表锁时，会检查当前表是否有对应的行锁，如果没有，则添加表锁，此时就 会从第一行数据，检查到最后一行数据，效率较低。
+
+有了意向锁之后 : 客户端一，在执行DML操作时，会对涉及的行加行锁，同时也会对该表加上意向锁。
+
+而其他客户端，在对这张表加表锁的时候，会根据该表上所加的意向锁来判定是否可以成功加表锁，而 不用逐行判断行锁情况了。
+
+- 意向共享锁(IS): 由语句select ... lock in share mode添加 。 与 表锁共享锁 (read)兼容，与表锁排他锁(write)互斥。 
+- 意向排他锁(IX): 由insert、update、delete、select...for update添加 。与表锁共 享锁(read)及排他锁(write)都互斥，意向锁之间不会互斥。
+
+一旦事务提交了，意向共享锁、意向排他锁，都会自动释放。
+
+可以通过以下SQL，查看意向锁及行锁的加锁情况：
+
+```sql
+select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+```
+
+演示:
+
+```sql
+begin;
+select * from ccc where id = 1 lock in share mode;
+lock tables ccc read; -- 可以
+unlock tables;
+lock tables ccc write; -- 不可以
+commit;
+unlock tables;
+```
+
+### **行级锁**
+
+行级锁，每次操作锁住对应的行数据。锁定粒度最小，发生锁冲突的概率最低，并发度最高。应用在 InnoDB存储引擎中。
+
+**InnoDB的数据是基于索引组织的，行锁是通过对索引上的索引项加锁来实现的**，而不是对记录加的 锁。对于行级锁，主要分为以下三类：
+
+- 行锁（Record Lock）：锁定单个行记录的锁，防止其他事务对此行进行update和delete。在 RC、RR隔离级别下都支持。
+- 间隙锁（Gap Lock）：锁定索引记录间隙（不含该记录），确保索引记录间隙不变，防止其他事 务在这个间隙进行insert，产生幻读。在RR隔离级别下都支持。
+- 临键锁（Next-Key Lock）：行锁和间隙锁组合，同时锁住数据，并锁住数据前面的间隙Gap。 在RR隔离级别下支持。
+
+**InnoDB行锁是通过给索引上的索引项加锁来实现的，Innodb一定存在聚簇索引，行锁最终都会落到聚簇索引上，通过非聚簇索引查询的时候，先锁非聚簇索引，然后再锁聚簇索引。**
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836959.png" alt="image-20221008135102322" style="zoom: 67%;" />
+
+**行锁**
+
+InnoDB实现了以下两种类型的行锁：
+
+- 共享锁（S）：允许一个事务去读一行，阻止其他事务获得相同数据集的排它锁。 
+- 排他锁（X）：允许获取排他锁的事务更新数据，阻止其他事务获得相同数据集的共享锁和排他锁。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836233.png" alt="image-20221008135234743" style="zoom: 33%;" />
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836305.png" alt="image-20221008135541150" style="zoom:33%;" />
+
+默认情况下，InnoDB在 REPEATABLE READ事务隔离级别运行，InnoDB使用 next-key 锁进行搜索和索引扫描，以防止幻读。
+
+- **针对唯一索引进行检索时，对已存在的记录进行等值匹配时，将会自动优化为行锁**。 
+- **InnoDB的行锁是针对于索引加的锁，不通过索引条件检索数据，那么InnoDB将对表中的所有记 录加锁，此时 就会升级为表锁。**
+
+可以通过以下SQL，查看意向锁及行锁的加锁情况：
+
+```sql
+select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+```
+
+演示案例：
+
+```sql
+CREATE TABLE `stu` (
+    `id` int NOT NULL PRIMARY KEY AUTO_INCREMENT,
+    `name` varchar(255) DEFAULT NULL,
+    `age` int NOT NULL
+) ENGINE = InnoDB CHARACTER SET = utf8mb4;
+INSERT INTO `stu` VALUES (1, 'tom', 1);
+INSERT INTO `stu` VALUES (3, 'cat', 3);
+INSERT INTO `stu` VALUES (8, 'rose', 8);
+INSERT INTO `stu` VALUES (11, 'jetty', 11);
+INSERT INTO `stu` VALUES (19, 'lily', 19);
+INSERT INTO `stu` VALUES (25, 'luci', 25);
+```
+
+```sql
+-- 共享锁
+begin;
+
+select * from ccc where id = 1 lock in share mode;
+
+select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+
+select * from ccc where id = 1 lock in share mode; -- 由于兼容，所以也会加上这个锁
+
+select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+
+-- 排它锁演示
+update ccc set name = 'pppp' where id = 2; -- 这里是可以的
+update ccc set name = 'pppp' where id = 1; -- 这里不可以因为共享锁和排它锁之间是互斥的
+```
+
+行锁演示：
+
+```sql
+create index idx_stu_name on stu(name);
+begin;
+update ccc set name = 'lili' where name = 'dd'; -- 这里是根据索引来创建行锁，不会影响到其他行
+update ccc set name = 'java' where id = 3; -- 因此update不同行时不冲突
+```
+
+**间隙锁**
+
+默认情况下，InnoDB在 REPEATABLE READ事务隔离级别运行，InnoDB使用 next-key 锁进行搜 索和索引扫描，以防止幻读。
+
+- 索引上的等值查询(唯一索引)，给不存在的记录加锁时, 优化为间隙锁 。
+
+	```sql
+	begin;
+	update ddd set name = '1111' where id = 4;
+	
+	begin;
+	insert into ddd values(4,'ghgh');
+	```
+
+- 索引上的等值查询(非唯一普通索引)，向右遍历时最后一个值不满足查询需求时，next-key lock 退化为间隙锁。 
+
+	```sql
+	-- age创建一个索引
+	create index idx_ccc_age on ccc(age);
+	
+	begin;
+	select * from ddd where age = 3 lock in share mode;
+	select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+	```
+
+	<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836620.png" alt="image-20221008203751875" style="zoom:50%;" />
+
+- 索引上的范围查询(唯一索引)--会访问到不满足条件的第一个值为止。
+
+	```sql
+	begin;
+	select * from ddd where id >= 2 lock in share mode;
+	select object_schema,object_name,index_name,lock_type,lock_mode,lock_data from performance_schema.data_locks;
+	```
+
+	
+
+	<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836718.png" alt="image-20221008204449485" style="zoom:50%;" />
+
+
+
+间隙锁唯一目的是防止其他事务插入间隙。间隙锁可以共存，一个事务采用的间隙锁不会 阻止另一个事务在同一间隙上采用间隙锁。
+
+我们知道InnoDB的B+树索引，叶子节点是有序的双向链表。 假如，我们要根据这个二级索引查询值 为18的数据，并加上共享锁，我们是只锁定18这一行就可以了吗？ 并不是，因为是非唯一索引，这个 结构中可能有多个18的存在，所以，在加锁时会继续往后找，找到一个不满足条件的值（当前案例中也 就是29）。此时会对18加临键锁，并对29之前的间隙加锁。
+
+查询的条件为id>=19，并添加共享锁。 此时我们可以根据数据库表中现有的数据，将数据分为三个部 分： [19] (19,25] (25,+∞] 所以数据库数据在加锁是，就是将19加了行锁，25的临键锁（包含25及25之前的间隙），正无穷的临 键锁(正无穷及之前的间隙)。
+
+# InnoDB引擎
+
+### 逻辑存储结构
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836421.png" alt="image-20221008205122017" style="zoom: 50%;" />
+
+1. 表空间 （ibd文件）：
+
+	表空间是InnoDB存储引擎逻辑结构的最高层， 如果用户启用了参数 innodb_file_per_table(在 8.0版本中默认开启) ，则每张表都会有一个表空间（xxx.ibd），一个mysql实例可以对应多个表空 间，用于存储记录、索引等数据。
+
+2. 段：
+
+	段，分为数据段（Leaf node segment）、索引段（Non-leaf node segment）、回滚段 （Rollback segment），InnoDB是索引组织表，数据段就是B+树的叶子节点， 索引段即为B+树的 非叶子节点。段用来管理多个Extent（区）。
+
+3. 区:
+
+	区，表空间的单元结构，每个区的大小为1M。 默认情况下， InnoDB存储引擎页大小为16K， 即一 个区中一共有64个连续的页。
+
+4. 页：
+
+	页，是InnoDB 存储引擎磁盘管理的最小单元，每个页的大小默认为 16KB。**为了保证页的连续性， InnoDB 存储引擎每次从磁盘申请 4-5 个区。**
+
+5. 行：
+
+	行，InnoDB 存储引擎数据是按行进行存放的。
+	
+	在行中，默认有两个隐藏字段： 
+	
+	**Trx_id：每次对某条记录进行改动时，都会把对应的事务id赋值给trx_id隐藏列。** 
+	
+	**Roll_pointer：每次对某条引记录进行改动时，都会把旧的版本写入到undo日志中，然后这个 隐藏列就相当于一个指针，可以通过它来找到该记录修改前的信息。**
+
+### 架构
+
+##### 内存
+
+MySQL5.5 版本开始，默认使用InnoDB存储引擎，它擅长事务处理，具有崩溃恢复特性，在日常开发 中使用非常广泛。下面是InnoDB架构图，左侧为内存结构，右侧为磁盘结构。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836784.png" alt="image-20221008205649046" style="zoom:50%;" />
+
+
+
+在左侧的内存结构中，主要分为这么四大块儿： Buffer Pool、Change Buffer、Adaptive Hash Index、Log Buffer。 接下来介绍一下这四个部分。
+
+**Buffer Pool**
+
+InnoDB存储引擎基于磁盘文件存储，访问物理硬盘和在内存中进行访问，速度相差很大，为了尽可能 弥补这两者之间的I/O效率的差值，就需要把经常使用的数据加载到缓冲池中，避免每次访问都进行磁 盘I/O。
+
+在InnoDB的缓冲池中不仅缓存了索引页和数据页，还包含了undo页、插入缓存、自适应哈希索引以及 InnoDB的锁信息等等。
+
+缓冲池 Buffer Pool，是主内存中的一个区域，里面可以缓存磁盘上经常操作的真实数据，在执行增 删改查操作时，先操作缓冲池中的数据（若缓冲池没有数据，则从磁盘加载并缓存），然后再以一定频 率刷新到磁盘，从而减少磁盘IO，加快处理速度。
+
+**缓冲池以Page页为单位，****底层采用链表数据结构管理Page**。根据状态，将Page分为三种类型：
+
+- free page：空闲page，未被使用。 
+- clean page：被使用page，数据没有被修改过。 
+- dirty page：脏页，被使用page，数据被修改过，也中数据与磁盘的数据产生了不一致。（页在缓冲池中被占用且存在，当crud时，缓冲改了，磁盘没有改）
+
+在专用服务器上，通常将多达80％的物理内存分配给缓冲池 。参数设置： show variables like 'innodb_buffer_pool_size';
+
+ **Change Buffer**
+
+Change Buffer，更改缓冲区（针对于非唯一二级索引页），在执行DML语句时，如果这些数据Page 没有在Buffer Pool中，不会直接操作磁盘，而会将数据变更存在更改缓冲区 Change Buffer 中，在未来数据被读取时，再将数据合并恢复到Buffer Pool中，再将合并后的数据刷新到磁盘中。
+
+Change Buffer的意义：
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836798.png" alt="image-20221008210526108" style="zoom: 50%;" />
+
+
+
+与聚集索引不同，二级索引通常是非唯一的，并且以相对随机的顺序插入二级索引。同样，删除和更新 可能会影响索引树中不相邻的二级索引页，如果每一次都操作磁盘，会造成大量的磁盘IO。有了 ChangeBuffer之后，我们可以在缓冲池中进行合并处理，减少磁盘IO。
+
+**Adaptive Hash Index**
+
+自适应hash索引，用于优化对Buffer Pool数据的查询。MySQL的innoDB引擎中虽然没有直接支持 hash索引，但是给我们提供了一个功能就是这个自适应hash索引。因为前面我们讲到过，hash索引在 进行等值匹配时，一般性能是要高于B+树的，因为hash索引一般只需要一次IO即可，而B+树，可能需 要几次匹配，所以hash索引的效率要高，但是hash索引又不适合做范围查询、模糊匹配等。
+
+自适应哈希索引，无需人工干预，是系统根据情况自动完成。
+
+参数： adaptive_hash_index
+
+**Log Buffer**
+
+日志缓冲区，用来保存要写入到磁盘中的log日志数据（redo log 、undo log）， 默认大小为 16MB，日志缓冲区的日志会定期刷新到磁盘中。如果需要更新、插入或删除许多行的事 务，增加日志缓冲区的大小可以节省磁盘 I/O。
+
+参数: 
+
+innodb_log_buffer_size：缓冲区大小 
+
+innodb_flush_log_at_trx_commit：日志刷新到磁盘时机，取值主要包含以下三个： 
+
+​			1: 日志在每次事务提交时写入并刷新到磁盘，默认值。 
+
+​			0: 每秒将日志写入并刷新到磁盘一次。 2: 日志在每次事务提交后写入，并每秒刷新到磁盘一次。
+
+##### 磁盘
+
+ **System Tablespace**
+
+系统表空间是更改缓冲区的存储区域。如果表是在系统表空间而不是每个表文件或通用表空间中创建 的，它也可能包含表和索引数据。(在MySQL5.x版本中还包含InnoDB数据字典、undolog等)
+
+ **File-Per-Table Tablespaces**
+
+如果开启了innodb_file_per_table开关 ，则每个表的文件表空间包含单个InnoDB表的数据和索 引 ，并存储在文件系统上的单个数据文件中。
+
+ **General Tablespaces**
+
+通用表空间，需要通过 CREATE TABLESPACE 语法创建通用表空间，在创建表时，可以指定该表空 间。
+
+ 创建表空间
+
+```sql
+CREATE TABLESPACE ts_name ADD DATAFILE 'file_name' ENGINE = engine_name;
+
+CREATE TABLESPACE ts_mu ADD DATAFILE 'mymu.ibd' ENGINE = innodb;
+```
+
+创建表时指定表空间
+
+```sql
+CREATE TABLE xxx ... TABLESPACE ts_name;
+
+create table a(id int primary key auto_increment, name varchar(10)) engine=innodb tablespace ts_mu;
+```
+
+ **Undo Tablespaces**
+
+撤销表空间，MySQL实例在初始化时会自动创建两个默认的undo表空间（初始大小16M），用于存储 undo log日志。
+
+**Temporary Tablespaces**
+
+InnoDB 使用会话临时表空间和全局临时表空间。存储用户创建的临时表等数据。
+
+**Doublewrite Buffer Files**
+
+双写缓冲区，innoDB引擎将数据页从Buffer Pool刷新到磁盘前，先将数据页写入双写缓冲区文件 中，便于系统异常时恢复数据。
+
+**Redo Log**
+
+重做日志，是用来实现事务的持久性。该日志文件由两部分组成：重做日志缓冲（redo log buffer）以及重做日志文件（redo log）,前者是在内存中，后者在磁盘中。当事务提交之后会把所 有修改信息都会存到该日志中, 用于在刷新脏页到磁盘时,发生错误时, 进行数据恢复使用。
+
+以循环方式写入重做日志文件，涉及两个文件：
+
+ib_logfile0
+
+ib_logfile1
+
+##### 后台线程
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836929.png" alt="image-20221008214900586" style="zoom:33%;" />
+
+1. Master Thread
+
+核心后台线程，负责调度其他线程，还负责将缓冲池中的数据异步刷新到磁盘中, 保持数据的一致性， 还包括脏页的刷新、合并插入缓存、undo页的回收 。
+
+2. IO Thread
+
+在InnoDB存储引擎中大量使用了AIO来处理IO请求, 这样可以极大地提高数据库的性能，而IO Thread主要负责这些IO请求的回调。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836811.png" alt="image-20221008215053542" style="zoom: 50%;" />
+
+
+
+3. Purge Thread
+
+主要用于回收事务已经提交了的undo log，在事务提交之后，undo log可能不用了，就用它来回 收。
+
+4. Page Cleaner Thread
+
+协助 Master Thread 刷新脏页到磁盘的线程，它可以减轻 Master Thread 的工作压力，减少阻 塞。
+
+### 事务原理
+
+事务 是一组操作的集合，它是一个不可分割的工作单位，事务会把所有的操作作为一个整体一起向系 统提交或撤销操作请求，即这些操作要么同时成功，要么同时失败。
+
+acid
+
+而对于这四大特性，实际上分为两个部分。 其中的原子性、一致性、持久化，实际上是由InnoDB中的 两份日志来保证的，一份是redo log日志，一份是undo log日志。 而持久性是通过数据库的锁， 加上MVCC来保证的。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836234.png" alt="image-20221008220713167" style="zoom:33%;" />
+
+##### redo log
+
+重做日志，记录的是事务提交时数据页的物理修改，使用来实现事务的持久性。
+
+该日志文件由两部分组成：重做日志缓冲（redo log buffer）以及重做日志文件（redo log file）,前者是在内存中，后者在磁盘中。当事务提交之后会把所有修改信息都存到该日志文件中, 用 于在刷新脏页到磁盘,发生错误时, 进行数据恢复使用。
+
+我们知道，在InnoDB引擎中的内存结构中，主要的内存区域就是缓冲池，在缓冲池中缓存了很多的数 据页。 当我们在一个事务中，执行多个增删改的操作时，InnoDB引擎会先操作缓冲池中的数据，如果 缓冲区没有对应的数据，会通过后台线程将磁盘中的数据加载出来，存放在缓冲区中，然后将缓冲池中 的数据修改，修改后的数据页我们称为脏页。 而脏页则会在一定的时机，通过后台线程刷新到磁盘 中，从而保证缓冲区与磁盘的数据一致。 而缓冲区的脏页数据并不是实时刷新的，而是一段时间之后 将缓冲区的数据刷新到磁盘中，**假如刷新到磁盘的过程出错了，而提示给用户事务提交成功，而数据却 没有持久化下来，这就出现问题了，没有保证事务的持久性。**
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836779.png" alt="image-20221009110554003" style="zoom: 67%;" />
+
+
+
+有了redolog之后，当对缓冲区的数据进行增删改之后，会首先将操作的数据页的变化，记录在redo log buffer中。在事务提交时，会将redo log buffer中的数据刷新到redo log磁盘文件中。 过一段时间之后，如果刷新缓冲区的脏页到磁盘时，发生错误，此时就可以借助于redo log进行数据 恢复，这样就保证了事务的持久性。 而如果脏页成功刷新到磁盘 或 或者涉及到的数据已经落盘，此 时redolog就没有作用了，就可以删除了，所以存在的两个redolog文件是循环写的
+
+那为什么每一次提交事务，要刷新redo log 到磁盘中呢，而不是直接将buffer pool中的脏页刷新 到磁盘呢 ?
+
+**因为在业务操作中，我们操作数据一般是随机读写磁盘的，而不是顺序读写磁盘，而redo log在往磁盘文件中写入数据，由于是日志文件，所以都是顺序写的 ，效率大于随机写。 这 种先写日志的方式，称之为 WAL（Write-Ahead Logging）。**
+
+##### undo log
+
+**回滚日志，用于记录数据被修改前的信息** , 作用包含两个 : 提供回滚(保证事务的原子性) 和 MVCC(多版本并发控制) 。
+
+undo log和redo log记录物理日志不一样，它是逻辑日志。可以认为当delete一条记录时，undo log中会记录一条对应的insert记录，反之亦然，当update一条记录时，它记录一条对应相反的 update记录。当执行rollback时，就可以从undo log中的逻辑记录读取到相应的内容并进行回滚。
+
+Undo log销毁：undo log在事务执行时产生，事务提交时，并不会立即删除undo log，因为这些 日志可能还用于MVCC。
+
+Undo log存储：undo log采用**段**的方式进行管理和记录，存放在前面介绍的 rollback segment 回滚段中，内部包含1024个undo log segment。
+
+
+
+### MVCC
+
+1. 当前读
+
+读取的是记录的最新版本，读取时还要保证其他并发事务不能修改当前记录，会对读取的记录进行加 锁。对于我们日常的操作，如：select ... lock in share mode(共享锁)，select ... for update、update、insert、delete(排他锁)都是一种当前读。
+
+```sql
+begin;
+select * from ddd;
+
+begin;
+update ddd set name = 'uuuu' where id = 3;
+commit;
+
+select * from ddd lock in share mode;
+```
+
+在测试中我们可以看到，即使是在默认的RR隔离级别下，事务A中依然可以读取到事务B最新提交的内 容，因为在查询语句后面加上了 lock in share mode 共享锁，此时是当前读操作。当然，当我们 加排他锁的时候，也是当前读操作。
+
+2. 快照读
+
+简单的select（不加锁）就是快照读，快照读，读取的是记录数据的可见版本，有可能是历史数据， 不加锁，是非阻塞读。
+
+- Read Committed：每次select，都生成一个快照读。 
+- Repeatable Read：开启事务后第一个select语句才是快照读的地方。
+- Serializable：快照读会退化为当前读。
+
+在测试中,我们看到即使事务B提交了数据,事务A中也查询不到。 原因就是因为普通的select是快照 读，而在当前默认的RR隔离级别下，开启事务后第一个select语句才是快照读的地方，后面执行相同 的select语句都是从快照中获取数据，可能不是当前的最新数据，这样也就保证了可重复读。
+
+3. mvcc
+
+全称 Multi-Version Concurrency Control，多版本并发控制。指维护一个数据的多个版本， 使得读写操作没有冲突，快照读为MySQL实现MVCC提供了一个非阻塞读功能。MVCC的具体实现，还需 要依赖于数据库记录中的三个隐式字段、undo log日志、readView。
+
+**隐藏字段**
+
+当我们创建了上面的这张表，我们在查看表结构的时候，就可以显式的看到这三个字段。 实际上除了 这三个字段以外，InnoDB还会自动的给我们添加三个隐藏字段及其含义分别是：
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836582.png" alt="image-20221009114919554" style="zoom: 33%;" />
+
+而上述的前两个字段是肯定会添加的， 是否添加最后一个字段DB_ROW_ID，得看当前表有没有主键， 如果有主键，则不会添加该隐藏字段。
+
+测试：
+
+进入服务器中的 /var/lib/mysql/itcast/ , 查看stu的表结构信息, 通过如下指令:
+
+```sql
+ibd2sdi stu.ibd
+```
+
+查看到的表结构信息中，有一栏 columns，在其中我们会看到处理我们建表时指定的字段以外，还有 额外的两个字段 分别是：DB_TRX_ID 、 DB_ROLL_PTR ，因为该表有主键，所以没有DB_ROW_ID 隐藏字段。
+
+##### undolog
+
+回滚日志，在insert、update、delete的时候产生的便于数据回滚的日志。 
+
+**当insert的时候，产生的undo log日志只在回滚时需要，在事务提交后，可被立即删除。**
+
+**而update、delete的时候，产生的undo log日志不仅在回滚时需要，在快照读时也需要，不会立即 被删除。**
+
+DB_TRX_ID : 代表最近修改事务ID，记录插入这条记录或最后一次修改该记录的事务ID，是 自增的。
+
+DB_ROLL_PTR ： 由于这条数据是才插入的，没有被更新过，所以该字段值为null。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836760.png" alt="image-20221009115838498" style="zoom: 67%;" />
+
+事务三
+
+当事务3执行第一条修改语句时，也会记录undo log日志，记录数据变更之前的样子; 然后更新记 录，并且记录本次操作的事务ID，回滚指针，回滚指针用来指定如果发生回滚，回滚到哪一个版本
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836185.png" alt="image-20221009115956933" style="zoom: 33%;" />
+
+事务四
+
+当事务4执行第一条修改语句时，也会记录undo log日志，记录数据变更之前的样子; 然后更新记 录，并且记录本次操作的事务ID，回滚指针，回滚指针用来指定如果发生回滚，回滚到哪一个版本。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836370.png" alt="image-20221009120122396" style="zoom: 33%;" />
+
+**最终我们发现，不同事务或相同事务对同一条记录进行修改，会导致该记录的undolog生成一条 记录版本链表，链表的头部是最新的旧记录，链表尾部是最早的旧记录。**
+
+那到底应该返回哪一个版本，就是readview
+
+#####  readview
+
+ReadView（读视图）是 快照读 SQL执行时MVCC提取数据的依据，**记录并维护系统当前活跃的事务 （未提交的）id。**
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836205.png" alt="image-20221009120715697" style="zoom: 50%;" />
+
+而在readview中就规定了版本链数据的访问规则：
+
+trx_id 代表当前undolog版本链对应事务ID。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836632.png" alt="image-20221009121431297" style="zoom:50%;" />
+
+不同的隔离级别，生成ReadView的时机不同：
+
+- READ COMMITTED ：在事务中每一次执行快照读时生成ReadView。 
+- REPEATABLE READ：仅在事务中第一次执行快照读时生成ReadView，后续复用该ReadView。
+
+##### 原理分析
+
+**RC隔离级别下，在事务中每一次执行快照读时生成ReadView。**
+
+**而开启事务后第一个select语句的地方才是快照读**
+
+我们就来分析事务5中，两次快照读读取数据，是如何获取数据的? 在事务5中，查询了两次id为30的记录，由于隔离级别为Read Committed，所以每一次进行快照读 都会生成一个ReadView，那么两次生成的ReadView如下。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836525.png" alt="image-20221009122010367" style="zoom:50%;" />
+
+那么这两次快照读在获取数据时，就需要根据所生成的ReadView以及ReadView的版本链访问规则， 到undolog版本链中匹配数据，最终决定此次快照读返回的数据。
+
+1. 第一次快照读：
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836844.png" alt="image-20221009122534088" style="zoom: 33%;" />
+
+在进行匹配时，会从undo log的版本链，从上到下进行挨个匹配：
+
+1. 先匹配 这条记录，这条记录对应的 trx_id为4，也就是将4带入右侧的匹配规则中。 ①不满足 ②不满足 ③不满足 ④也不满足 ， 都不满足，则继续匹配undo log版本链的下一条。 
+2. 再匹配第二条 ，这条 记录对应的trx_id为3，也就是将3带入右侧的匹配规则中。①不满足 ②不满足 ③不满足 ④也 不满足 ，都不满足，则继续匹配undo log版本链的下一条。 
+3. 再匹配第三条 ，这条记 录对应的trx_id为2，也就是将2带入右侧的匹配规则中。①不满足 ②满足 终止匹配，此次快照 读，返回的数据就是版本链中记录的这条数据。
+
+4. 第二次快照读
+
+- 先匹配 这条记录，这条记录对应的 trx_id为4，也就是将4带入右侧的匹配规则中。 ①不满足 ②不满足 ③不满足 ④也不满足 ， 都不满足，则继续匹配undo log版本链的下一条。 
+- 再匹配第二条 ，这条 记录对应的trx_id为3，也就是将3带入右侧的匹配规则中。①不满足 ②满足 。终止匹配，此次 快照读，返回的数据就是版本链中记录的这条数据。
+
+##### RR隔离级别
+
+RR隔离级别下，仅在事务中第一次执行快照读时生成ReadView，后续复用该ReadView。 而RR 是可 重复读，在一个事务中，执行两次相同的select语句，查询到的结果是一样的。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836531.png" alt="image-20221009123700178" style="zoom: 67%;" />
+
+我们看到，在RR隔离级别下，只是在事务中第一次快照读时生成ReadView，后续都是复用该 ReadView，那么既然ReadView都一样， ReadView的版本链匹配规则也一样， 那么最终快照读返 回的结果也是一样的。
+
+所以呢，MVCC的实现原理就是通过 InnoDB表的隐藏字段、UndoLog 版本链、ReadView来实现的。 而MVCC + 锁，则实现了事务的隔离性。 而一致性则是由redolog 与 undolog保证。
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836902.png" alt="image-20221009123935010" style="zoom:50%;" />
+
+# MySQL管理
+
+<img src="https://myimage-1314195759.cos.ap-chengdu.myqcloud.com/img/202210121836228.png" alt="image-20221009125441510" style="zoom:50%;" />
+
+### 常用工具
+
+**mysql**
+
+该mysql不是指mysql服务，而是指mysql的客户端工具。
+
+```sql
+语法 ：
+	mysql [options] [database]
+选项 ：
+    -u, --user=name #指定用户名
+    -p, --password[=name] #指定密码
+    -h, --host=name #指定服务器IP或域名
+    -P, --port=port #指定连接端口
+    -e, --execute=name #执行SQL语句并退出
+```
+
+-e选项可以在Mysql客户端执行SQL语句，而不用连接到MySQL数据库再执行，对于一些批处理脚本， 这种方式尤其方便
+
+示例：
+
+```sql
+mysql -uroot –p123456 db01 -e "select * from stu";
+```
+
+ **mysqladmin**
+
+mysqladmin 是一个执行管理操作的客户端程序。可以用它来检查服务器的配置和当前状态、创建并 删除数据库等。
+
+```sql
+通过帮助文档查看选项：
+	mysqladmin --help
+```
+
+语法
+
+```sql
+语法:
+    mysqladmin [options] command ...
+选项:
+    -u, --user=name #指定用户名
+    -p, --password[=name] #指定密码
+    -h, --host=name #指定服务器IP或域名
+    -P, --port=port #指定连接端口
+```
+
+实例
+
+```sql
+mysqladmin -uroot –p1234 drop 'test01';
+mysqladmin -uroot –p1234 version;
+```
+
+
+
+**mysqlshow**
+
+客户端对象查找工具，用来很快地查找存在那些数据库中的表，列，索引
+
+```sql
+mysqlshow -uroot -p1234 db01 --count
+```
+
+**mysqldump**
+
+备份数据库或在不同数据库之间进行数据迁移
+
+```sql
+mysqldump -uroot -p1234 db01 > db01.sql
+```
+
+**mysqlimport**
+
+数据导入工具
